# translation-template

./: .gitignore  CLAUDE.md  README.md  project.yaml  pyproject.toml
.claude/skills/build-html/: SKILL.md
.claude/skills/ingest-pdf/: SKILL.md
.claude/skills/proofread/: SKILL.md
.claude/skills/publish/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/start/: SKILL.md
.claude/skills/transcribe/: SKILL.md
.claude/skills/translate/: SKILL.md
dashboard/: app.js  index.html  style.css
docs/superpowers/plans/: 2026-06-02-dashboard-and-viewer.md  2026-06-02-foundation-and-scripts.md  2026-06-02-skills-and-guidance.md
docs/superpowers/specs/: 2026-06-02-translation-template-design.md
scripts/: build_html.py  checks.py  config.py  crop_page.py  dashboard.py  dashboard_data.py  extract_pages.py  imaging.py  proofing.py  validate_skills.py  verify.py  viewer.py  viewer_data.py  webserver.py
tests/: conftest.py  test_build_html.py  test_checks.py  test_config.py  test_dashboard.py  test_imaging.py  test_proofing.py  test_smoke.py  test_validate_skills.py  test_verify.py  test_viewer.py  test_web_integration.py  test_webserver.py
viewer/: app.js  index.html  style.css
work/sample-work/: status.yaml
work/sample-work/translation/: section-01.json
