[project]
name = "translation-template"
version = "0.1.0"
description = "Claude-driven template for Catholic Latin/Greek to English translation"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "Pillow>=10.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
